2009-04-15  Stephan Arts <stephan@xfce.org>

	* == Released 4.6.1 ===
	* configure.ac.in: Update version info

2009-04-02	Brian Tarricone	<bjt23@cornell.edu>

	* xfce4-session/sm-layer.c: Fix default value for /security/EnableTcp
	  so it's disabled if the property isn't in xfconf (bug 5126).

2009-03-01	Brian Tarricone <bjt23@cornell.edu>

	* settings/xfae-model.c: Don't crash in xfae_item_free() when passed
	  a NULL pointer (bug 5020).

2009-02-25  Stephan Arts <stephan@xfce.org>

	* == Released 4.6.0 ==
	* NEWS: Update News
	* configure,in.in: Update version number and dependencies

2009-02-18	Brian Tarricone <bjt23@cornell.edu>

	* settings/xfce4-session-settings.glade: Don't mark gtk stock ids as
	  translatable.  Patch from Stefan Stuhr (bug 4719).

2009-02-13	Jannis Pohlmann <jannis@xfce.org>

	* settings/xfae-window.c: Fix a crash in xfce4-session-settings when
	  trying to add a new autostarted application. XfaeWindow is no longer
	  a GtkWindow and can thus not be used as a parent in
	  gtk_window_set_transient_for() anymore (bug 4934).

2009-02-01	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/xfsm-shutdown-helper.c: Fix sudo shutdown helper;
	  use the correct offset into the command string table.  Also
	  ignore EINTR on errors, as the shutdown helper sometimes gets
	  killed before replying to the SM (bug 4849).

2009-01-26	Brian Tarricone <bjt23@cornell.edu>

	* xfce4-session/main.c: Respect the ICEAUTHORITY environment
	  variable (bug 4369).

2009-01-26	Jannis Pohlmann <jannis@xfce.org>

	* == Released 4.5.99.1 ==
	* NEWS: Update NEWS file for the release.
	* configure.in.in: Bump version number.

2009-01-14	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Post-release version bump.

2009-01-12	Stephan Arts <stephan@xfce.org>

	* === Release 4.5.93 ===
	* configure.in.in: Bump version number

2009-01-11	Jannis Pohlmann <jannis@xfce.org>

	* NEWS: Update NEWS for the upcoming 4.5.93 release.
