@@ -1,3 +1,9 @@
+2009-06-04	Brian Tarricone <bjt23@cornell.edu>
+
+	* xfce4-session/xfsm-global.c: Add timing information to verbose
+	  log printouts.
+	* xfce4-session/xfsm-{manager,startup}.c: Fix a couple warnings.
+
 2009-04-15  Stephan Arts <stephan@xfce.org>
 
 	* == Released 4.6.1 ===
